 - Enhancement  #1131 Smarter location of set artwork
 - Fixed defect #1604 Set poster is not picked up correctly for series with ":" in the name
 - Enhancement  #1671 Add New:TV and New:Movies categories
 - Enhancement  #1687 Only load the required poster scanner plugins
 - Fixed defect #1702 ComingSoon plot and outline have TRAMA LUNGA & TRAMA BREVA in them
 - Fixed defect #1707 SET XML not correct (Looks like a movie XML)
 - Enhancement  #1710 Ability to use tvdbid field in NFO files
 - Enhancement  #1713 Better output for method file size
 - Fixed defect #1719 Incorrect fanart retrieved from cache
 - Fixed defect #1720 MKVs with unmarked subtitles are falsely flagged as "NO"
 - Fixed defect #1726 Movie poster is still downloaded even with ID of -1 in NFO file.
 - Fixed defect #1727 scrapeLibrary in library.xml is not honored
 - Fixed defect #1729 Filmweb plugin doesn't work after filmweb site has been changed
 - Fixed defect #1735 IMDb adding "Video" to some titles

MovieJukebox 2.2
----------------
  - Enhancement   #323 TheMovieDB plugin created
  - Fixed defect  #558 New episodes from TV series didn't appear in the NEW Category.
  - Enhancement   #617 Add logo to cover art to indicate the presence of subtitle
  - Enhancement   #735 Allow users to tune category parameters on a per-category basis
  - Enhancement   #773 Save NFO files
  - Enhancement  #1440 Detect VOBSUB tracks in MKV files
  - Enhancement  #1497 Timeouts added for TheTVDb and TheMovieDb
  - Fixed defect #1546 New index not updating correctly
  - Fixed defect #1555 Genres added to ComingSoon plugin
  - Enhancement  #1560 Rescanning based on Jukebox Property changes
  - Fixed defect #1567 Download of French cover doesn't work properly
  - Fixed defect #1605 New IMDb site format breaks IMDb scanner (Updated for additional plot formats)
  - Enhancement  #1606 New fields for MovieListingPluginCustomCsv and limits for Cast and Genres fields
  - Fixed defect #1609 Only one fanart downloaded